@@ -1,3 +1,1 @@
-org.junit_3.8.2.v3_8_2_v20100427-1100/junit.jar=/usr/share/java/junit4.jar
 org.junit4/junit.jar=/usr/share/java/junit4.jar
-org.junit_4.8.2.v4_8_2_v20110321-1705/junit.jar=/usr/share/java/junit4.jar
